<resources>
    <string name="app_name">慧农云平台</string>
    <string name="main_str">成都智棚农业科技有限公司</string>
    <string name="hone_circle_str">慧农云平台</string>
    <string name="exit_str">退出</string>
    <string name="back_str">返回</string>
    <string name="login_loading">登录中&#8230;</string>
    <string name="login_str">登录</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_hint_account">请填写账号/手机号</string>
    <string name="login_hint_password">请填写密码</string>
    <string name="login_btn_str">登录</string>
    <string name="login_noaccount">没有账户？那就注册一个吧！</string>
    <string name="login_register_str">立即注册</string>
    <string name="top_register_str">用户注册</string>
    <string name="register1_hint_phone">请填写手机号</string>
    <string name="register1_hint_code">请填写验证码</string>
    <string name="register1_send_code">发送验证码</string>
    <string name="register1_btn_str">立即注册</string>
    <string name="register2_hint2_et1">请填写企业名称</string>
    <string name="register2_hint2_et2">请填写企业地址</string>
    <string name="register2_hint2_et3">请填写企业账号</string>
    <string name="register2_hint2_et4">请设置您的账号密码</string>
    <string name="register2_hint2_et5">请确认您的账号密码</string>
    <string name="register2_btn_str">提交</string>
    <string name="register3_tv1">注册成功</string>
    <string name="register3_tv2">恭喜你，账号注册成功！</string>
    <string name="app_exit">再按一次退出程序</string>
    <string name="account_on_warning">请输入账号</string>
    <string name="password_on_warning">请输入密码</string>
    <string name="request_error1">网络访问失败</string>
    <string name="request_error2">异常</string>
    <string name="request_error3">操作失败</string>
    <string name="request_error4">标记接口数据异常</string>
    <string name="request_error5">密码不一致</string>
    <string name="request_error6">请完整信息</string>
    <string name="request_error7">异常</string>
    <string name="request_error8">无数据</string>
    <string name="request_error9">数据异常，请重新登录</string>
    <string name="request_error10">无更多数据</string>
    <string name="request_error11">解析出错</string>
    <string name="request_error12">无法获取</string>
    <string name="request_error13">无法获取天气</string>
    <string name="request_error14">无天气信息</string>
    <string name="request_error15">正在获取天气</string>
    <string name="request_error16">视频信息异常</string>
    <string name="request_error17">登录信息异常</string>
    <string name="request_error18">未获取到数据，点击重试！</string>
    <string name="request_error_oncity">无城市信息</string>
    <string name="request_error_Coords">获取城市坐标失败</string>
    <string name="loading_success">刷新成功</string>
    <string name="devmain_str1">清空</string>
    <string name="devmain_str2">删除</string>
    <string name="devmain_str3">编辑</string>
    <string name="devmain_str4">保存</string>
    <string name="devmain_str5">编号</string>
    <string name="devmain_str6">IP/端口:</string>
    <string name="devmain_str7">保存成功</string>
    <string name="devmain_str8">保存失败</string>
    <string name="devmain_str9">终端名字</string>
    <string name="devmain_str10">终端编号</string>
    <string name="devmain_str11">备注</string>
    <string name="devmain_str12">确定清空？</string>
    <string name="devmain_str13">确定删除？</string>
    <string name="hone_bottom1">设备控制</string>
    <string name="hone_bottom2">设备维护</string>
    <string name="hone_bottom3">掉线提醒</string>
    <string name="hone_bottom4">账号管理</string>
    <string name="hone_no_hly">还没有慧农云设备？现在添加一个吧！</string>
    <string name="hone_no_hly1">添加设备开启在线智能管理</string>
    <string name="hone_amf1">无权限</string>
    <string name="hone_circle_title">首页</string>
    <string name="hone_circle_str4" translatable="false">智慧园林管理服务系统</string>
    <string name="hone_circle_str1">原力园慧农云平台</string>
    <string name="hone_circle_str2">温室环控</string>
    <string name="hone_circle_str3">点击模块，开启在线智能管理</string>
    <string name="hone_dev_item_footer">添加终端</string>
    <string name="hone_add_dev0">添加设备</string>
    <string name="hone_add_dev1">添加终端</string>
    <string name="hone_add_dev2">添加视频</string>
    <string name="hone_add_dev3">添加萤石云</string>
    <string name="hone_add_dev4">添加四情</string>
    <string name="add_dev_tv1">终端名称</string>
    <string name="add_dev_tv2">终端编号</string>
    <string name="add_dev_hint1">请输入终端名称</string>
    <string name="add_dev_hint2">请输入终端编号</string>
    <string name="add_dev_hint3">请输入备注</string>
    <string name="add_acc">添加账户</string>
    <string name="request_succ">添加成功</string>
    <string name="request_fail">添加失败</string>
    <string name="title1">环境数据</string>
    <string name="circle_hj">环境数据</string>
    <string name="circle_bj">报警信息</string>
    <string name="circle_sfj">施肥机</string>
    <string name="circle_yc">远程控制</string>
    <string name="circle_sq">四情监测</string>
    <string name="circle_sp">视频信息</string>
    <string name="circle_tj">统计报表</string>
    <string name="aaa_js">角色:</string>
    <string name="aaa_acc">账号:</string>
    <string name="aaa_name">姓名:</string>
    <string name="aaa_phone">电话:</string>
    <string name="aaa_hjs">请选择角色</string>
    <string name="aaa_hacc">请输入账号</string>
    <string name="aaa_hname">请输入姓名</string>
    <string name="aaa_hphone">请输入电话</string>
    <string name="aaa_btn">添加</string>
    <string name="envir_fra1">实时数据</string>
    <string name="envir_fra2">历史数据</string>
    <string name="envir_fra_htv1">请选择</string>
    <string name="envir_fra_htv2">选择终端</string>
    <string name="envir_fra_htv3">选择区域</string>
    <string name="envir_fra_htv4">开始时间</string>
    <string name="envir_fra_htv5">结束时间</string>
    <string name="envir_fra_htv6">查询</string>
    <string name="envir_fra_htv7">自定义</string>
    <string name="envir_fra_htv8">切换表格</string>
    <string name="envir_fra_htv9">切换图表</string>
    <string name="envir_fra_htv10">选择网关</string>
    <string name="envir_nodata">无数据展示</string>
    <string name="envir_str">自定义绘制</string>
    <string name="envir_str1">取消</string>
    <string name="envir_str2">绘制</string>
    <string name="envir_str3">类型</string>
    <string name="envir_str4">最大值</string>
    <string name="envir_str5">最小值</string>
    <string name="envir_str6">平均值</string>
    <string name="envir_str7">时间范围不要大于3天</string>
    <string name="envir_str8">北</string>
    <string name="envir_str9">东北</string>
    <string name="envir_str10">东</string>
    <string name="envir_str11">东南</string>
    <string name="envir_str12">南</string>
    <string name="envir_str13">西南</string>
    <string name="envir_str14">西</string>
    <string name="envir_str15">西北</string>
    <string name="envir_str16">北</string>
    <string name="envir_str17">正在降雨</string>
    <string name="envir_str18">无雨</string>
    <string name="rem_con_str">远程控制</string>
    <string name="rem_con_str1">设备控制</string>
    <string name="rem_con_str2">参数设置</string>
    <string name="rem_con_str3">手动</string>
    <string name="rem_con_str4">自动</string>
    <string name="rem_con_str5">定时</string>
    <string name="rem_con_str6">未知</string>
    <string name="rem_con_str7">已停止</string>
    <string name="rem_con_str8">正在展开</string>
    <string name="rem_con_str9">正在收拢</string>
    <string name="rem_con_str10">正在打开</string>
    <string name="rem_con_str11">正在关闭</string>
    <string name="rem_con_str12">已打开</string>
    <string name="socket_error1">包长度异常</string>
    <string name="socket_error2">标识符异常</string>
    <string name="socket_error3">请求类型异常</string>
    <string name="socket_error4">命令类型异常</string>
    <string name="socket_error5">解析异常</string>
    <string name="socket_error6">socket为空</string>
    <string name="socket_succ">修改成功</string>
    <string name="jiangWenStr">降温℃</string>
    <string name="autoParamStr">自控参数</string>
    <string name="shangXianStr">上限</string>
    <string name="xiaXianStr">下限</string>
    <string name="aeraOneStr">一区</string>
    <string name="aeraTwoStr">二区</string>
    <string name="jiaWenStr">加温℃</string>
    <string name="zheGuangStr">遮光K</string>
    <string name="buGuangStr">补光K</string>
    <string name="chuShiStr">除湿%</string>
    <string name="jiaShiStr">加湿%</string>
    <string name="refreshStr">刷新</string>
    <string name="wenduAutoStr">温度自动</string>
    <string name="shiduAutoStr">湿度自动</string>
    <string name="guangzhaoAutoStr">光照自动</string>
    <string name="parsetstr">设置成功</string>
    <string name="parsetstr1">获取成功</string>
    <string name="parsetstr2">参数类型</string>
    <string name="parsetstr3">1区上限</string>
    <string name="parsetstr4">1区下限</string>
    <string name="parsetstr5">2区上限</string>
    <string name="parsetstr6">2区下限</string>
    <string name="parsetstr7">降温℃</string>
    <string name="parsetstr8">减CO2</string>
    <string name="parsetstr9">加CO2</string>
    <string name="parsetstr10">(不在线)</string>
    <string name="parsetstr11">终端不可用</string>
    <string name="parset_time1">时间段1</string>
    <string name="parset_time2">时间段2</string>
    <string name="parset_time3">时间段3</string>
    <string name="parset_time4">时间段4</string>
    <string name="parset_time5">时间段5</string>
    <string name="set">设置</string>
    <string name="video_str1">选择设备</string>
    <string name="video_str2">选择通道</string>
    <string name="video_str3">视频信息</string>
    <string name="video_str4">高清</string>
    <string name="video_str5">标清</string>
    <string name="video_str6">流畅</string>
    <string name="video_str7">拍照</string>
    <string name="video_str8">对讲</string>
    <string name="video_str9">控制</string>
    <string name="video_str10">视频初始化失败</string>
    <string name="video_str11">获取设备失败</string>
    <string name="video_str12">无设备信息</string>
    <string name="video_str13">请选择设备</string>
    <string name="video_str15">请选择通道</string>
    <string name="video_str14">无通道</string>
    <string name="video_str16">播放失败</string>
    <string name="video_str17">设置清晰度失败</string>
    <string name="video_str18">控制已开启</string>
    <string name="video_str19">控制已关闭</string>
    <string name="video_str20">请先播放</string>
    <string name="video_str21">已保存至</string>
    <string name="video_str22">无法保存</string>
    <string name="video_str23">保存失败</string>
    <string name="video_str24">对讲已开启</string>
    <string name="video_str25">对讲已关闭</string>
    <string name="video_str26">未获取到播放信息</string>
    <string name="video_str27">萤石云</string>
    <string name="video_str28">视频</string>
    <string name="video_str29">请完整信息和播放</string>
    <string name="video_str30">实时视频</string>
    <string name="video_str31">选择监控点</string>
    <string name="video_str32">悬浮</string>
    <string name="warn_str1">预警信息</string>
    <string name="warn_str2">实时报警</string>
    <string name="warn_str3">历史报警</string>
    <string name="warn_str4">报警设置</string>
    <string name="warn_str5">数据异常</string>
    <string name="warn_str6">解析出错</string>
    <string name="warn_str7">解析出错</string>
    <string name="warn_str8">报警类型</string>
    <string name="warn_str9">报警状态</string>
    <string name="warn_str10">无终端</string>
    <string name="warn_str11">无报警类型</string>
    <string name="warn_str12">请选择终端</string>
    <string name="warn_str13">未获取到信息</string>
    <string name="warn_str14">所有</string>
    <string name="warn_str15">未解除</string>
    <string name="warn_str16">自动解除</string>
    <string name="warn_str17">传感器类型</string>
    <string name="faddvid_str1">设备名称</string>
    <string name="faddvid_str2">默认模式</string>
    <string name="faddvid_str3">IP地址</string>
    <string name="faddvid_str4">web端口号</string>
    <string name="faddvid_str5">管理端口号</string>
    <string name="faddvid_str8">设备标识符</string>
    <string name="faddvid_str10">登录名</string>
    <string name="faddvid_str11">密码</string>
    <string name="faddvid_str12">备注</string>
    <string name="faddvid_str13">设备分类</string>
    <string name="faddvid_str14">设备序列号</string>
    <string name="faddvid_str15">设备验证码</string>
    <string name="faddfour_str1">监测点名称</string>
    <string name="faddfour_str2">虫情测报灯编号</string>
    <string name="faddfour_str3">苗情监测仪编号</string>
    <string name="faddfour_str4">墒情气象站编号</string>
    <string name="faddfour_str5">灾情摄像头信息</string>
</resources>