<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/et_dmfd1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/devmain_str9"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_dmfd2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/devmain_str10"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_dmfd3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top"
        android:hint="@string/devmain_str11" />

</LinearLayout>