<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <ImageView
        android:layout_width="756px"
        android:layout_height="120px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50px"
        android:background="@drawable/re_step1" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_register_phone"
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300px"
        android:hint="@string/register1_hint_phone"
        android:inputType="number"
        android:textSize="50px"
        app:met_baseColor="@color/colorDeafult"
        app:met_clearButton="true"
        app:met_iconLeft="@drawable/re_phone"
        app:met_iconPadding="0dp"
        app:met_maxCharacters="11"
        app:met_primaryColor="@color/title"
        app:met_singleLineEllipsis="true" />

    <LinearLayout
        android:layout_width="900px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10px"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_register_code"
            android:layout_width="600px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/register1_hint_code"
            android:inputType="number"
            android:textSize="50px"

            app:met_baseColor="@color/colorDeafult"
            app:met_clearButton="true"
            app:met_iconLeft="@drawable/re_message"
            app:met_iconPadding="0dp"
            app:met_primaryColor="@color/title"
            app:met_singleLineEllipsis="true" />

        <TextView
            android:id="@+id/tv_register_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:gravity="center_horizontal"
            android:text="@string/register1_send_code"
            android:textColor="@color/title"
            android:textSize="40px" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_ok"
        android:layout_width="900px"
        android:layout_height="130px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400px"
        android:background="@drawable/login_click_effect_in"
        android:text="@string/register1_btn_str"
        android:textAllCaps="false"
        android:textColor="@color/mWhite"
        android:textSize="58px"
        android:textStyle="bold" />


</LinearLayout>
